// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeGroup render should not render if hidden 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TimeGroup
    disabled={false}
    handleKeyPress={[Function]}
    hidden={true}
    label=""
    onFocus={[Function]}
    onSet={[Function]}
    referenceHour={9}
    shouldHaveFocus={false}
    tabIndexes={0}
    time={
      Object {
        "hours": 0,
        "minutes": 0,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`TimeGroup render should render two TimeFields 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TimeGroup
    disabled={false}
    handleKeyPress={[Function]}
    hidden={false}
    label=""
    onFocus={[Function]}
    onSet={[Function]}
    referenceHour={9}
    shouldHaveFocus={false}
    tabIndexes={0}
    time={
      Object {
        "hours": 0,
        "minutes": 0,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <label
          htmlFor="12345_h"
        >
          
        </label>,
        <TimeField
          disabled={false}
          handleKeyPress={[Function]}
          mode="hours"
          onChange={[Function]}
          onFocus={[Function]}
          referenceHour={9}
          shouldHaveFocus={false}
          tabIndex={0}
          value={0}
        />,
        <span
          className="separator"
        >
          :
        </span>,
        <TimeField
          disabled={false}
          handleKeyPress={[Function]}
          mode="minutes"
          onChange={[Function]}
          onFocus={[Function]}
          referenceHour={9}
          shouldHaveFocus={false}
          tabIndex={1}
          value={0}
        />,
      ],
      "className": "time-group ",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "",
          "htmlFor": "12345_h",
        },
        "ref": null,
        "rendered": "",
        "type": "label",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "disabled": false,
          "handleKeyPress": [Function],
          "mode": "hours",
          "onChange": [Function],
          "onFocus": [Function],
          "referenceHour": 9,
          "shouldHaveFocus": false,
          "tabIndex": 0,
          "value": 0,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": ":",
          "className": "separator",
        },
        "ref": null,
        "rendered": ":",
        "type": "span",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "disabled": false,
          "handleKeyPress": [Function],
          "mode": "minutes",
          "onChange": [Function],
          "onFocus": [Function],
          "referenceHour": 9,
          "shouldHaveFocus": false,
          "tabIndex": 1,
          "value": 0,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            htmlFor="12345_h"
          >
            
          </label>,
          <TimeField
            disabled={false}
            handleKeyPress={[Function]}
            mode="hours"
            onChange={[Function]}
            onFocus={[Function]}
            referenceHour={9}
            shouldHaveFocus={false}
            tabIndex={0}
            value={0}
          />,
          <span
            className="separator"
          >
            :
          </span>,
          <TimeField
            disabled={false}
            handleKeyPress={[Function]}
            mode="minutes"
            onChange={[Function]}
            onFocus={[Function]}
            referenceHour={9}
            shouldHaveFocus={false}
            tabIndex={1}
            value={0}
          />,
        ],
        "className": "time-group ",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "htmlFor": "12345_h",
          },
          "ref": null,
          "rendered": "",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "disabled": false,
            "handleKeyPress": [Function],
            "mode": "hours",
            "onChange": [Function],
            "onFocus": [Function],
            "referenceHour": 9,
            "shouldHaveFocus": false,
            "tabIndex": 0,
            "value": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": ":",
            "className": "separator",
          },
          "ref": null,
          "rendered": ":",
          "type": "span",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "disabled": false,
            "handleKeyPress": [Function],
            "mode": "minutes",
            "onChange": [Function],
            "onFocus": [Function],
            "referenceHour": 9,
            "shouldHaveFocus": false,
            "tabIndex": 1,
            "value": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
